--- a/lib/cache_auto_finance_web/templates/layout/app.html.eex
+++ b/lib/cache_auto_finance_web/templates/layout/app.html.eex
@@ -2,29 +2,101 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <title>Cache Auto Finance · We&ldquo;ll Help you</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Cache Auto Finance · We&ldquo;ll Help you</title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <meta name="description" content="Get Approved!">
+    <base href="/">
+
+    <link rel="icon" href="<%= Routes.static_path(@conn, "/images/favicon.ico") %>">
+
+    <!-- See https://goo.gl/OOhYW5 -->
+    <!-- <link rel="manifest" href="<%= Routes.static_path(@conn, "/js/manifest.json") %>"> -->
+
+    <!-- See https://goo.gl/qRE0vM -->
+    <meta name="theme-color" content="#3f51b5">
+
+    <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
+    <!-- <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="My App"> -->
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="My App"> -->
+
+    <!-- Homescreen icons -->
+    <!-- <link rel="apple-touch-icon" href="<%= Routes.static_path(@conn, "/images/manifest/icon-48x48.png") %>">
+    <link rel="apple-touch-icon" sizes="72x72" href="<%= Routes.static_path(@conn, "/images/manifest/icon-72x72.png") %>">
+    <link rel="apple-touch-icon" sizes="96x96" href="<%= Routes.static_path(@conn, "/images/manifest/icon-96x96.png") %>">
+    <link rel="apple-touch-icon" sizes="144x144" href="<%= Routes.static_path(@conn, "/images/manifest/icon-144x144.png") %>">
+    <link rel="apple-touch-icon" sizes="192x192" href="<%= Routes.static_path(@conn, "/images/manifest/icon-192x192.png") %>"> -->
+
+    <!-- Tile icon for Windows 8 (144x144 + tile color) -->
+    <!-- <meta name="msapplication-TileImage" content="<%= Routes.static_path(@conn, "/images/manifest/icon-144x144.png") %>">
+    <meta name="msapplication-TileColor" content="#3f51b5">
+    <meta name="msapplication-tap-highlight" content="no"> -->
+
+    <!-- Default twitter cards -->
+    <!-- <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@username">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="my-app">
+    <meta property="og:image" content="<%= Routes.static_path(@conn, "/images/manifest/icon-144x144.png") %>"> -->
+
+    <!-- Performance tip: hint to the browser to start the handshake for the fonts site -->
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <!-- <script>
+      // Load and register pre-caching Service Worker
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('<%= Routes.static_path(@conn, "/js/service-worker.js") %>', {
+            scope: '/',
+          });
+        });
+      }
+
+      // Redux assumes `process.env.NODE_ENV` exists in the ES module build.
+      // https://github.com/reactjs/redux/issues/2907
+      window.process = { env: { NODE_ENV: 'production' } };
+    </script> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="style">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="<%= Routes.static_path(@conn, "/css/app.css") %>" rel="preload" as="style">
+    <link href="<%= Routes.static_path(@conn, "/css/app.css") %>" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="/">Home</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/cache-auto-finance-logo.jpg") %>" alt="Cache Auto Finance Logo"/>
-        </a>
-      </section>
-    </header>
-    <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
-    </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script>
+      window.onerror = function() {
+        'use-strict'
+        window.alertedBadBrowser = false
+        if(arguments[0] === 'Invalid character') {
+          if(!window.alertedBadBrowser) (window.alertedBadBrowser = true) && alert('Your browser is dangerously out-of-date and a risk to your privacy. Browsers more than 5 years old are not supported by Down Under Sports.\n\nPlease install an up-to-date browser')
+        }
+      }
+    </script>
+    <layout-client appTitle="Cache Auto Finance">
+
+      <header>
+        <section class="container">
+          <nav role="navigation">
+            <ul>
+              <li><a href="/">Home</a></li>
+            </ul>
+          </nav>
+          <a href="http://phoenixframework.org/" class="phx-logo">
+            <img src="<%= Routes.static_path(@conn, "/images/cache-auto-finance-logo.jpg") %>" alt="Cache Auto Finance Logo"/>
+          </a>
+        </section>
+      </header>
+      <main role="main" class="container">
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+        <%= render @view_module, @view_template, assigns %>
+      </main>
+    </layout-client>
+    <script src="<%= Routes.static_path(@conn, "/js/shared-runtime.js") %>"></script>
+    <script src="<%= Routes.static_path(@conn, "/js/vendors~app.js") %>"></script>
+    <script src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
